Compositor image node cannot properly load multilayer EXRs (post-multiview) #44343

Closed
opened 2015-04-10 19:33:18 +02:00 by Jason Clarke · 7 comments

System Information
Mac OS 10.10.3, AMD 5870

Blender Version
Broken: 40334b4
Worked: 2.74 official

Short description of error
When trying to load a multilayer EXR into the compositor via the image node, most passes will be corrupt. The image can be viewed normally in the UV/image editor, but the compositor will output garbage data (often checkered or interlaced)

Exact steps for others to reproduce the error
Load the attached .blend file, note the differences between the exr_bug file in the UV/image editor, and what happens when passing it through the compositor. Loading the same file in 2.74 works normally.

Example blend (includes packed .exr, so a few MB too big for direct attach): https://dl.dropboxusercontent.com/u/1706676/exr_comp_bug.blend

**System Information** Mac OS 10.10.3, AMD 5870 **Blender Version** Broken: 40334b4 Worked: 2.74 official **Short description of error** When trying to load a multilayer EXR into the compositor via the image node, most passes will be corrupt. The image can be viewed normally in the UV/image editor, but the compositor will output garbage data (often checkered or interlaced) **Exact steps for others to reproduce the error** Load the attached .blend file, note the differences between the exr_bug file in the UV/image editor, and what happens when passing it through the compositor. Loading the same file in 2.74 works normally. Example blend (includes packed .exr, so a few MB too big for direct attach): https://dl.dropboxusercontent.com/u/1706676/exr_comp_bug.blend
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke
Dalai Felinto was assigned by Julian Eisel 2015-04-13 19:14:09 +02:00
Member

Added subscribers: @dfelinto, @JulianEisel

Added subscribers: @dfelinto, @JulianEisel
Member

@dfelinto, sounds like another one for you ;) (Maybe it's related to #44342?)

@dfelinto, sounds like another one for you ;) (Maybe it's related to #44342?)

This issue was referenced by 66e2fc39ce

This issue was referenced by 66e2fc39ce2fbb02eda44775fbaf758d7ddf5834

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 66e2fc39ce.

Closed by commit 66e2fc39ce.
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#44343
No description provided.