Fix T44343 Compositor image node cannot properly load multilayer EXRs